Improve code quality for GitHub release
  - Add LICENSE (MIT)
  - Update .gitignore for better security
  - Move hardcoded values to configuration
  - Add openai to dependencies
  - Enable mypy in CI
  - Improve error handling
  - Update documentation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,9 @@ jobs:
         working-directory: backend
         run: ruff check app/
 
-      # - name: Run Mypy
-      #   working-directory: backend
-      #   run: mypy app/
+      - name: Run Mypy
+        working-directory: backend
+        run: mypy app/
 
   backend-test:
     runs-on: ubuntu-latest
