--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,9 @@ HOST=0.0.0.0
 PORT=8000
 DEBUG=False
 
+# CORS Settings (comma-separated origins)
+CORS_ORIGINS=http://localhost:5173,http://localhost:3000
+
 # Storage Paths
 DATA_DIR=./data
 UPLOAD_DIR=./data/uploads
@@ -26,6 +29,9 @@ WHISPER_MODEL=base
 WHISPER_DEVICE=cpu
 WHISPER_LANGUAGE=ja
 
+# GPT-4o Transcribe Settings
+GPT4O_TRANSCRIBE_MODEL=gpt-4o-transcribe
+
 # Manual Generation
 AUTO_MERGE_THRESHOLD_SEC=5.0
 MIN_STEP_DURATION_SEC=3.0
@@ -35,10 +41,10 @@ PDF_ENGINE=playwright
 TEMPLATE_DIR=./templates
 DEFAULT_TEMPLATE=manual_default.md.j2
 
-# OpenAI API
-# GPT-5を使った文字起こし要約機能に必要
+# OpenAI API (Required for GPT-4o STT and Summarization)
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-5
+OPENAI_MODEL=gpt-4o
+OPENAI_MAX_COMPLETION_TOKENS=2000
 
 # Logging
 LOG_LEVEL=INFO
