--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "opencv-python>=4.8.1",
     "numpy>=1.26.0",
     "Pillow>=10.1.0",
+    "openai>=1.0.0",
     "openai-whisper>=20231117",
     "jinja2>=3.1.2",
     "aiofiles>=23.2.1",
@@ -54,9 +55,9 @@ select = ["E", "F", "I", "N", "W", "UP"]
 
 [tool.mypy]
 python_version = "3.11"
-strict = true
 warn_return_any = true
 warn_unused_configs = true
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
