Fix GitHub Actions CI errors
  - Remove unused variables in dummy_stt.py (Ruff)
  - Add data directory creation for pytest
  - Add ESLint configuration for frontend
  - Add Vite TypeScript environment definitions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e .[test]
 
+      - name: Create data directories
+        working-directory: backend
+        run: mkdir -p data/{uploads,captures,intermediate,exports}
+
       - name: Run tests
         working-directory: backend
         run: pytest tests/ -v
