Fix mypy module path resolution
  Add --explicit-package-bases flag to prevent module name
  conflicts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Run Mypy
         working-directory: backend
-        run: mypy app/
+        run: mypy --explicit-package-bases app/
 
   backend-test:
     runs-on: ubuntu-latest
