--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         working-directory: backend
         run: |
           python -m pip install --upgrade pip
-          pip install black ruff mypy
+          pip install black ruff mypy types-Markdown
 
       - name: Run Black
         working-directory: backend
