--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dev = [
     "black>=23.11.0",
     "ruff>=0.1.6",
     "mypy>=1.7.0",
+    "types-Markdown>=3.5.0",
 ]
 test = [
     "pytest>=7.4.3",
